# Compton

./: 0_detected_energies.txt  10_detected_energies.txt  11_detected_energies.txt  12_detected_energies.txt  13_detected_energies.txt  1_detected_energies.txt  2_detected_energies.txt  3_detected_energies.txt  4_detected_energies.txt  5_detected_energies.txt  6_detected_energies.txt  7_detected_energies.txt  8_detected_energies.txt  9_detected_energies.txt  ADC.py  ADC_fin_amplitudes.txt  ADC_fin_counts.txt  ADC_fin_counts_err.txt  ADC_gaus_amplitudes.txt  ADC_gaus_channels.txt  ADC_gaus_channels_err.txt  ADC_gaus_counts.txt  ADC_integrale.py  ADC_linearity.py  ADC_pre_amplitudes.txt  ADC_pre_channels.txt  Calibrazione_Franco_AMP.txt  Calibrazione_HV&Gain.py  Calibrazione_Ugo_2_AMP.txt  Calibrazione_Ugo_AMP.txt  Experimental setup  LabLibrary.py  MoraPyRoot.py  N_scattering_center.ipynb  Programma semplice in Python.py  README.md  Rate_vs_cross_section.ipynb  energetic_resolution_vs_HV&Gain.py  h_Franco_AMP-TSCA.txt  parameters.txt  (+1 more)
ADC/: ADC_fin_amplitudes_err.txt  ADC_fin_channels.txt  ADC_fin_channels_err.txt  ADC_gaus_amplitudes_err.txt  ADC_gaus_counts_err.txt  ADC_pre_amplitudes_err.txt  ADC_pre_channels_err.txt  ADC_pre_counts.txt  ADC_pre_counts_err.txt
Attività/: graph_Co_60.py
Simulations/geant4_compton/: CMakeLists.txt  vis.mac
Simulations/geant4_compton/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh
Simulations/geant4_compton/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
(+2604 files in other folders)
